--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "@types/uuid": "^8.3.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "class-transformer": "^0.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
