--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
   "dependencies": {
     "@types/uuid": "^8.3.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.2.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
     "typescript": "^4.2.2",
-    "uuid": "^8.3.2",
-    "class-transformer": "^0.2.3"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "6.8.0",
